--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "homepage": "https://github.com/gtdrag/BuyFluidly#readme",
   "dependencies": {
     "bulma": "^0.7.1",
-    "bulma-start": "0.0.2",
+    "bulma-carousel": "^3.0.0",
     "connect": "^3.6.6"
   }
 }
